# 2017-C-BMP-Monochrome

./: .gitignore  BMP_to_monochrome.c  CMakeLists.txt  README.md  bmp.c  bmp.h  build-debug.bat  build-debug.sh  build.bat  build.sh
